required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- MSSQL2008: Add support for geography data type by extending the DATA syntax 
  to 'geometry_column(geometry_type) from table_name'

- Fixed ability to get the error message and code of an OWS exception (#3554)

- Fixed msOGRGetSymbolId according to the changes in gdal 1.8 (#3556)

- Support holding WMS client requests in RAM instead of writing to disk (#3555)

- RFC-61: Enhance MapServer Feature Style Support (#3544)

- Restrict cascaded WMS requests based on EXTENT (#3543)

- Avoid EPSG lookups for WMS client layers if possible (#3533)

- RFC-60: Add ability to skip ANGLE FOLLOW labels with too much character overlap (#3523)

- Fixed SWF: not a valid Bitmap FillStyle (#3548)

- Set dependency on libxml2 when building --with-wfs (#3512)

- Fixed TRUE is undefined in shptreevis (#3545)

- shptreevis: bug truncates visualization shapefile if there are more
  nodes in the tree than there are shapes being indexed! 

- Fixed multiple include tags not supported in xml mapfiles (#3530)

- Support reading .dbf files between 2GB and 4GB (#3514)

- Avoid warnings about ms_cvsid being unused with gcc. 

- Ensure the class is not marked BeforeFieldInit causing memory corruption with C#/CLR4 (#3438)

- Fixed MSSQL2008 driver returning invalid extent (#3498)

- Added coordinate scaling to shpxy tag via parameters scale, scale_x or scale_y.

- Fix computation of shape bounds when the first line contains no points
  (#3119)(fixes #3383)

- Allow map relative specification in the PROJ_LIB config item (#3094)

- Try to report reprojection errors in SLD Filter evaluation (#3495)
